--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     },
     "form-data": "4.0.5",
     "cipher-base": "1.0.5",
-    "pbkdf2": "3.1.3"
+    "pbkdf2": "3.1.3",
+    "sha.js": "2.4.12",
+    "elliptic": "6.6.1"
   }
 }
