--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cipher-base": "1.0.5",
     "pbkdf2": "3.1.3",
     "sha.js": "2.4.12",
-    "elliptic": "6.6.1"
+    "elliptic": "6.6.1",
+    "ws": "^7.5.10",
+    "secp256k1": "^4.0.4"
   }
 }
