--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "axios": "^1.7.2"
   },
   "overrides": {
+    "qs": "6.14.1",
+    "base-x": "3.0.11",
     "@uniswap/v3-periphery": {
       "@openzeppelin/contracts": "3.4.2"
     },
