fixed the undici vulnerability by ensuring the project uses version 5.28.5

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sha.js": "2.4.12",
     "elliptic": "6.6.1",
     "ws": "^7.5.10",
-    "secp256k1": "^4.0.4"
+    "secp256k1": "^4.0.4",
+    "undici": "5.28.5"
   }
 }
