--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "bignumber.js": "^9.1.1",
     "chai": "^4.3.7",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.14.0",
-    "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.2",
+    "hardhat": "^2.22.4",
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^5.0.4",
@@ -50,6 +50,7 @@
     "elliptic": "6.6.1",
     "ws": "^7.5.10",
     "secp256k1": "^4.0.4",
-    "undici": "5.28.5"
+    "undici": "5.28.5",
+    "serialize-javascript": "^6.0.2"
   }
 }
